feat: update juc note